<resources>
    <string name="app_name">Android Study</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="coffee_order">Coffee Order</string>
    <string name="court_counter">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_1_points">+1 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="reset">Reset</string>
    <string name="your_name">Your name</string>
    <string name="toppings">Toppings</string>
</resources>
