<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="org.rocex.studyandroid.CoffeeOrderActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/total"
            android:textAlignment="textEnd"
            android:textSize="24sp" />
        
        <TextView
            android:id="@+id/textViewQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/quantity"
            android:textSize="24sp" />
        
        <Button
            android:id="@+id/btnReduce"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:onClick="onDecrementCount"
            android:text="-"
            android:textSize="24sp" />
        
        <TextView
            android:id="@+id/editTextCount"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="number"
            android:text="1"
            android:textAlignment="center"
            android:textSize="24sp" />
        
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:onClick="onIncrementCount"
            android:text="+"
            android:textSize="24sp" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/price"
            android:textSize="24sp" />
        
        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="numberDecimal"
            android:text="10"
            android:textAlignment="textEnd"
            android:textSize="24sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/order_summary"
            android:textSize="24sp"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/textViewSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="24sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/buttonOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>
